tests/baselines/reference/invalidEnumAssignments.errors.txt
==== tests/cases/compiler/invalidEnumAssignments.ts (6 errors) ====
    enum E {
        A,
        B
    }
    
    enum E2 {
        A,
        B
    }
    
    var e: E;
    var e2: E2;
    
    e = E2.A;
    ~
!!! error TS2011: Cannot convert 'E2' to 'E'.
    e2 = E.A;
    ~~
!!! error TS2011: Cannot convert 'E' to 'E2'.
    e = <void>null;
    ~
!!! error TS2011: Cannot convert 'void' to 'E'.
    e = {};
    ~
!!! error TS2011: Cannot convert '{}' to 'E'.
    e = '';
    ~
!!! error TS2011: Cannot convert 'string' to 'E'.
    
    function f<T>(a: T) {
        e = a;
        ~
!!! error TS2011: Cannot convert 'T' to 'E'.
    }